--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "animate.css": "^4.1.1",
     "boxicons": "^2.1.4",
     "emailjs": "^4.0.3",
     "firebase": "^10.7.1",
@@ -22,6 +23,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
+    "surge": "^0.24.6",
     "sweetalert2": "^11.10.1",
     "typewriter-effect": "^2.21.0"
   },
