--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "boxicons": "^2.1.4",
     "emailjs": "^4.0.3",
     "firebase": "^10.7.1",
+    "framer-motion": "^11.11.17",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
     "match-sorter": "^6.3.4",
@@ -22,6 +24,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
+    "react-vertical-timeline-component": "^3.6.0",
+    "scrolltrigger": "^1.0.1",
     "sort-by": "^1.2.0",
     "surge": "^0.24.6",
     "sweetalert2": "^11.10.1",
