--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.21.0",
+    "react-scroll-trigger": "^0.6.14",
     "react-vertical-timeline-component": "^3.6.0",
     "scrolltrigger": "^1.0.1",
     "sort-by": "^1.2.0",
